@startuml Builder_UML

class Car {
    - type : string
    - engine : string
    - wheels : string
    + setType(type : string) : void
    + setEngine(engine : string) : void
    + setWheels(wheels : string) : void
    + show() : void
}

abstract class CarBuilder {
    - car : Car
    + buildEngine() : void
    + buildWheels() : void
    + getCar() : Car
}

class FordBuilder {
    + buildEngine() : void
    + buildWheels() : void
}

class VWBuilder {
    + buildEngine() : void
    + buildWheels() : void
}

class Orchestrator {

    - builder : CarBuilder
    + Orchestrator(builder : CarBuilder)
    + createCar() : Car
}

CarBuilder <|-- FordBuilder
CarBuilder <|-- VWBuilder
Orchestrator *-- CarBuilder
CarBuilder --> Car

@enduml

